--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -89,9 +89,9 @@ tools_menu: true
     <input class="uk-button uk-margin" uk-toggle="target: #modal" id="submit" type="button" value="Search" onclick="getDataFastAWithChrom()" style="margin-top: 10px;"/> 
   </div>
 </form>
-
+<!-- Modal -->
   <div id="modal" class="uk-modal-container" uk-modal esc-close="false" bg-close="false">
-    <div class="uk-modal-dialog uk-modal-body uk-modal-dialog-large" uk-overflow-auto >
+    <div class="uk-modal-dialog uk-modal-body uk-modal-dialog-large"  >
       <div id="modal-text">
         <h2 class="uk-modal-title">Allele Search</h2>
         <div id="modal-gene-name"></div>
@@ -103,8 +103,8 @@ tools_menu: true
           </div>
         </div>
 
-          <div id="modal-body">
-              <table id="variant-table" class="uk-table uk-table-divider uk-table-striped uk-table-small">
+          <div id="modal-body" uk-overflow-auto>
+              <table id="variant-table" class="uk-table uk-table-divider uk-table-striped uk-table-small" >
                   <thead style="background-color: lightgrey;">
                       <tr>
                           <th class="uk-text-emphasis">Chromosome</th>
@@ -133,7 +133,7 @@ tools_menu: true
               </table>
           </div>
       </div>
-        <div style="display: flex; justify-content: space-between;">
+        <div class="uk-margin" style="display: flex; justify-content: space-between;">
           <button class="uk-button uk-modal-close" type="button" onclick="refreshPage()">Close</button>
           <div>
             <button class="uk-button" onclick="downloadTxt()">Export txt</button> 
@@ -266,9 +266,7 @@ async function getDataFromFastA(chromosome,collectionName,start,stop,geneName) {
         stopWithFlank = stop
       }
 
-    //let parsedGenomicRegion = document.getElementById("genomic-region").value.split('-')
     document.getElementById("modal-search-region").innerHTML = `<span>${startWithFlank} - ${stopWithFlank}</span>`
-
 
     let url = `https://app.soybase.org/api/fasta-api/vcf/fetch/${chromosome}:${startWithFlank}-${stopWithFlank}/https://data.legumeinfo.org/Glycine/max/diversity/${collection}/${fileName}`
     let requestOptionsVariants = {
@@ -390,44 +388,44 @@ async function getDataFromFastA(chromosome,collectionName,start,stop,geneName) {
               .catch(error => console.log('error', error))      
     }
     
+    function downloadTxt(){
+      let content = document.getElementById("modal-text").innerText
+      let filename = document.getElementById("modal-gene-name").innerText
+      let filenameChrom = document.getElementById("region-searched").innerText
+      let a = document.createElement('a')
+      let blob = new Blob([content], {type: 'text'})
+      let url = URL.createObjectURL(blob)
+      a.setAttribute('href', url)
+      a.setAttribute('download', `${filename ? filename : filenameChrom}.txt`)
+      a.click()
+    } 
 
-function downloadTxt(){
-  let content = document.getElementById("modal-text").innerText
-  let filename = document.getElementById("modal-gene-name").innerText
-  let filenameChrom = document.getElementById("region-searched").innerText
-  let a = document.createElement('a')
-  let blob = new Blob([content], {type: 'text'})
-  let url = URL.createObjectURL(blob)
-  a.setAttribute('href', url)
-  a.setAttribute('download', `${filename ? filename : filenameChrom}.txt`)
-  a.click()
-} 
+    function csvDownload() {
+      let csv_data = [];
+      let rows = document.getElementsByTagName('tr');
+        for (let i = 0; i < rows.length; i++) {    
+            let cols = rows[i].querySelectorAll('td,th');
+            let csvrow = [];
 
-
-function csvDownload() {
-  let csv_data = [];
-  let rows = document.getElementsByTagName('tr');
-    for (let i = 0; i < rows.length; i++) {    
-        let cols = rows[i].querySelectorAll('td,th');
-        let csvrow = [];
-
-        for (let j = 0; j < cols.length; j++) {
-            csvrow.push(cols[j].innerHTML);
+            for (let j = 0; j < cols.length; j++) {
+                csvrow.push(cols[j].innerHTML);
+            }
+            csv_data.push(csvrow.join(","));
         }
-        csv_data.push(csvrow.join(","));
-    }
-        csv_data = csv_data.join('\n');
+            csv_data = csv_data.join('\n');
 
-  let filename = document.getElementById("modal-gene-name").innerText
-  let filenameChrom = document.getElementById("region-searched").innerText
-  CSVFile = new Blob([csv_data], { type: "text/csv" });
-  let temp_link = document.createElement('a');
-  temp_link.download = `${filename ? filename : filenameChrom}.csv`;
-  let url = window.URL.createObjectURL(CSVFile);
-  temp_link.href = url;
-  temp_link.style.display = "none";
-  document.body.appendChild(temp_link);
-  temp_link.click();
-  document.body.removeChild(temp_link);
-  }
+      let filename = document.getElementById("modal-gene-name").innerText
+      let filenameChrom = document.getElementById("region-searched").innerText
+      CSVFile = new Blob([csv_data], { type: "text/csv" });
+      let temp_link = document.createElement('a');
+      temp_link.download = `${filename ? filename : filenameChrom}.csv`;
+      let url = window.URL.createObjectURL(CSVFile);
+      temp_link.href = url;
+      temp_link.style.display = "none";
+      document.body.appendChild(temp_link);
+      temp_link.click();
+      document.body.removeChild(temp_link);
+    }
+
+
 </script>
