resolve change requests

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@ blog_card: true
         <td>
           <div class="uk-button uk-width-1-1 uk-margin-small-bottom" title="Visualize trait features (QTL and GWAS) using the CMap-js tool.">
             <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
-              <a href="/maps" target="_blank"><b>Genetic & trait maps</b></a>
+              <a href="/maps"><b>Genetic & trait maps</b></a>
             </button>
           </div>
         </td>
