--- a/index.html
+++ b/index.html
@@ -8,6 +8,59 @@ blog_card: true
 
 ---
 
+<style>
+  h1 {
+    margin: 0;
+  }
+.search-container {
+  display: flex; 
+  justify-content: space-between;
+}
+
+.form-wrapper {
+  white-space: nowrap;
+}
+
+.search-label{
+  font-weight: bold;
+}
+
+.go-btn {
+  margin-right: 5px;
+}
+
+.footer {
+  margin-top: 50px;
+}
+
+@media (max-width: 700px){
+  .search-container{
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+  }
+  .form-wrapper{
+    margin-top: 10px;
+  }
+  form {
+    text-align: left;
+  }
+  .kw-label {
+    margin-left: -113px;
+  }
+  .gis-label {
+    margin-left: -70px;
+  }
+  .sv-label {
+    margin-left: -118px;
+  }
+  .footer {
+    text-align: center;
+  }
+}
+
+</style>
+
 <h1>SoyBase</h1>
 
 <p class="uk-text-default">SoyBase integrates genetic and genomic information to aid
@@ -16,9 +69,47 @@ blog_card: true
  We anticipate that that this transition will continue through 2024. 
  In the meantime, you can also continue to use <a href="https://legacy.soybase.org/" target="_blank">"legacy SoyBase"</a>.
 </p>
+
+<div class="search-container">
+  <div class="form-wrapper">
+    <form action="https://mines.legumeinfo.org/glycinemine/keywordSearchResults.do" name="search" method="get" style="display:inline;">
+      <label class="search-label kw-label" for="searchTerm">Keyword Search</label><br>
+      <input style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="searchTerm"
+      value="&quot;seed weight&quot;" onFocus="clearElement(this);" />
+      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="go-btn"/>
+    </form>
+  </div>
+
+  <div>
+    <div class="form-wrapper">
+      <form action="https://dev.soybase.org/tools/search/gene.html" name="search" method="get" style="display:inline;">
+      <label class="search-label gis-label" for="identifier">Gene identifier search</label><br>
+      <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
+      value="Glyma.15g026400" onFocus="clearElement(this);" />
+      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="go-btn" />
+    </form>
+  </div>
+  </div>
+
+  <div>
+    <div class="form-wrapper">
+      <form action="https://gcv.soybase.org/search" name="search" method="get" style="display:inline;">
+      <label class="search-label sv-label" for="q">Synteny viewer</label><br>
+      <input type="hidden" id="sources" name="sources" value="soybase,liu2020">
+      <input id="q" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="q"
+      value="Glyma.20G010000" onFocus="clearElement(this);" />
+      <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" class="go-btn"/>
+    </form>
+  </div>
+  </div>
+
+</div>
+
+<hr>
+
 <div class="uk-overflow-auto">
   <!-- <table class="uk-table" width="100%" cellspacing=5; style="border-spacing: 5px;"> -->
-  <table width="100%" cellspacing=5; style="border-spacing: 1px;">
+  <!-- <table class="uk-table uk-table-responsive" width="100%" cellspacing=5; style="border-spacing: 1px;">
     <colgroup>
       <col width="33%" />
       <col width="33%" />
@@ -73,12 +164,94 @@ blog_card: true
           </form>
       </tr>
     </tbody>
-  </table>
-
-<hr>
-
+  </table> -->
   <!-- <table class="uk-table" width="100%" cellspacing=5; style="border-spacing: 5px;"> -->
-  <table width="100%"; cellspacing=5; style="border-spacing: 1px;">
+
+    <div class="uk-child-width-1-2@s uk-child-width-1-2@l uk-child-width-1-3@xl uk-flex-center " uk-grid>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Enter one or more sequences and search against soybean genomes, proteins, or transcript sequences.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Cornsilk;">
+          <a href="/tools/sequenceserver/"><b>Sequence search (BLAST)</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Enter one or more sequences and annotate them, view in a phylogenetic tree, etc.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Cornsilk;">
+          <a href="https://funnotate.legumeinfo.org/" target="_blank"><b>Annotate sequences</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Glycine pangenes, or look up corresponding gene IDs between annotations.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Cornsilk;">
+          <a href="/tools/translate/"><b>Pangenes / gene translator</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="InterMine for soybean and wild relatives in Glycine.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;">
+          <a href="https://mines.legumeinfo.org/glycinemine/begin.do" target="_blank"><b>GlycineMine</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Search for studies by trait term, author, etc.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;">
+          <a href="/tools/search/trait.html"><b>Trait association search</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Enter a list of genes (Wm82 a2) and test for enrichment of gene ontology terms -- or annotate your list.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Seashell;" >
+          <a href="/tools/analysis/go.html"><b>GO enrichment</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Visualize trait features (QTL and GWAS) using the CMap-js tool.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
+          <a href="/maps"><b>Genetic & trait maps</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Genome browsers (JBrowse and GBrowse) for visualizing genes and other features on chromosomes.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
+          <a href="/tools/browsers"><b>Genome browsers</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="GCViT tool for visualizing variants (SNPs) between selected genotypes.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:Azure;">
+          <a href="/tools/gcvit/"><b>Genotype comparisons</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Soybean GWAS features from many studies, against a common framework (ZZbrowse tools).">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
+          <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y" target="_blank"><b>GWAS viewer</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Soybean QTL features from many studies, against a common framework (ZZbrowse tools).">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
+          <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=n&datasets=Soybean%20QTL&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y" target="_blank"><b>QTL viewer</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="QTL and/or GWAS features from many studies; compare between soybean and another selected species (slow; please be patient).">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:MistyRose;">
+          <a href="https://zzbrowse.legumeinfo.org/?tab=WhGen&twoSpecies=y&datasets=Soybean%20GWAS&chr=Gm01&selected=100000&window=250000&traitsFromOntology=y" target="_blank"><b>cross-species QTL/GWAS</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="View geographic origins of Glycine accessions in the USDA GRIN-Global system.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button" style="background-color:AntiqueWhite;">
+          <a href="https://germplasm-map.legumeinfo.org/#?zoom=4&maxRecs=2000&taxonQuery=Glycine&traitOverlay=&traitScale=global&country=&geocodedOnly&traitExcludeUnchar=false&limitToMapExtent=false&lat=-15.03&lng=154.16&mapHeight=341.5&baseMap=ESRI%20-%20NatGeo%20(default,%20reference%20map)&ne_lat=-0.17578097424708533&ne_lng=210.05859375000003&sw_lat=-28.921631282421302&sw_lng=98.26171875000001&accessionIdsInclusive=false" target="_blank"><b>Germplasm GIS</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="Search and view soybean genes in their metabolic pathways.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="background-color:AntiqueWhite;">
+          <a href="/tools/soycyc"><b>Metabolic pathways</b></a>
+        </button>
+      </div>
+      <div class="uk-flex uk-flex-center uk-flex-middle" title="View soybean varieties and accessions and their pedigrees.">
+        <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap" type="button"  style="background-color:AntiqueWhite;">
+          <a href="/tools/parentage/"><b>Parentage & pedigrees</b></a>
+        </button>
+      </div>
+    </div>
+
+
+
+
+
+
+
+  <!-- <table class="uk-table uk-table-responsive" width="100%"; cellspacing=5; style="border-spacing: 1px;">
     <colgroup>
       <col width="33%" />
       <col width="34%" />
@@ -208,10 +381,11 @@ blog_card: true
         </td>
       </tr>
     </tbody>
-  </table>
+  </table> -->
 </div>
 
-<h2>Funding and Development</h2>
+<div class="footer">
+  <h2>Funding and Development</h2>
 <p>SoyBase is funded by the USDA-ARS. SoyBase is developed and hosted by the USDA-ARS SoyBase and Legume Clade Database group at Ames, IA, with development assistance from the National Center for Genome Resources (NCGR) with the help of many other researchers in the soybean community.</p>
 <div class="uk-child-width-expand@s uk-flex uk-flex-middle" uk-grid>
   <a href="https://www.ars.usda.gov/main/main.htm" target="_blank" title="USDA ARS website">
@@ -221,3 +395,13 @@ blog_card: true
     <img src="{{ "assets/img/ncgr.png" | relative_url }}" width="200" height="auto" alt="NCGR logo"/>
   </a>
 </div>
+</div>
+
+
+<script>
+
+function clearElement(e) {
+        var value = document.getElementById('quickSearchInput').value;
+      }
+
+</script>
