fix center button margins

--- a/index.html
+++ b/index.html
@@ -97,7 +97,6 @@ blog_card: true
   }
  
 
-
 </style>
 
 <h1>SoyBase</h1>
@@ -146,7 +145,7 @@ blog_card: true
 <hr>
 
 <div>
-    <div class="uk-child-width-1-2@s uk-child-width-1-2@l uk-child-width-1-3@xl uk-flex-center " uk-grid>
+    <div class="uk-child-width-1-2@s uk-child-width-1-2@l uk-child-width-1-3@xl uk-flex-center uk-grid-column-small uk-grid-row-small" uk-grid>
       <div class="uk-flex uk-flex-center uk-flex-middle" title="Enter one or more sequences and search against soybean genomes, proteins, or transcript sequences.">
         <button class="uk-button uk-width-1-1 uk-button-small uk-text-capitalize uk-text-nowrap cornsilk col3-cornsilk" type="button" >
           <a href="/tools/sequenceserver/"><b>Sequence search (BLAST)</b></a>
