update tool.yml file to add allele search

--- a/tools/alleles/index.html
+++ b/tools/alleles/index.html
@@ -2,6 +2,7 @@
 title: Allele search
 sitemap: sequence map
 tools_menu: true
+web_components: true
 ---
 
 <H2>Allele Search</H2>
@@ -153,6 +154,8 @@ tools_menu: true
     {% endif %}
   {% endfor %}
 {% endfor %} 
+
+
 
 
 <script>
