Fix dev.soybase links

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ blog_card: true
               var value = document.getElementById('quickSearchInput').value;
             }
           </script>
-          <form action="https://dev.soybase.org/tools/search/gene.html" name="search" method="get" style="display:inline;">
+          <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
             <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
             value="Glyma.15g026400" onFocus="clearElement(this);" />
             <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
