--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -31,7 +31,7 @@ tools_menu: true
       var value = document.getElementById('quickSearchInput').value;
     }
   </script>
-  <form action="https://dev.soybase.org/tools/search/gene.html" name="search" method="get" style="display:inline;">
+  <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
     &nbsp;&nbsp; GeneID: <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
     value="Glyma.15g026400" onFocus="clearElement(this);" />
     <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
@@ -49,7 +49,7 @@ tools_menu: true
       var value = document.getElementById('quickSearchInput').value;
     }
   </script>
-  <form action="https://dev.soybase.org/tools/search/gene.html" name="search" method="get" style="display:inline;">
+  <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
     &nbsp;&nbsp; GeneID: <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
     value="Glyma.15g026400" onFocus="clearElement(this);" />
     <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
@@ -62,7 +62,7 @@ tools_menu: true
 <p> 
   <b style="font-size:larger">Expression tracks in genome browsers</b> for the Williams 82 assembly 2 and 4.<br>
   <ul>
-    <li><a href="https://dev.soybase.org/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1&loc=glyma.Wm82.gnm2.Gm01:1-1000000&tracklist=true">Wm82.gnm2</a></li>
-    <li><a href="https://dev.soybase.org/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1&loc=glyma.Wm82.gnm4.Gm01:1-1000000&tracklist=true">Wm82.gnm4</a></li>
+    <li><a href="/assets/js/jbrowse/?assembly=Wm82.gnm2&tracks=Wm82.gnm2.ann1&loc=glyma.Wm82.gnm2.Gm01:1-1000000&tracklist=true">Wm82.gnm2</a></li>
+    <li><a href="/assets/js/jbrowse/?assembly=Wm82.gnm4&tracks=Wm82.gnm4.ann1&loc=glyma.Wm82.gnm4.Gm01:1-1000000&tracklist=true">Wm82.gnm4</a></li>
   </ul>
 </p>
