--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -7,32 +7,79 @@ tools_menu: true
 
 <p>
   <b style="font-size:larger">Expression profile, phylogenetic tree, and coexpression network</b> for a single gene.<br>
-  From the <b><a target="_blank" href="https://conekt.legumeinfo.org">CoNekT report</a></b>, 
-  <ul>
-    <li>you can view the expression profile,</li>
-    <li>view the <u>phylogenetic tree of orthologous genes</u> with expression values,</li>
-    <li>and view <u>profile neighbors</u> (genes with similar co-expression profiles).</li>
-  </ul>
+  From the <b><a target="_blank" href="https://conekt.legumeinfo.org">CoNekT report</a></b>, you can ...
+    view the expression profile, 
+    view the <u>phylogenetic tree of orthologous genes</u> with expression values, and 
+    view <u>profile neighbors</u> (genes with similar co-expression profiles).
   
   This is available for the Williams 82 assembly 2 annotation <i>(glyma.Wm82.gnm2.ann1.)</i>.
-  <form id="gotogeneform" oninput="urlgene = parturl.value +''+ geneid.value.trim(); gotogeneform.action= urlgene; genelink.href= urlgene; genelink.innerHTML = urlgene;">
+  <form id="gotogeneform" oninput="urlgene = parturl.value +''+ geneid.value.trim(); gotogeneform.action = urlgene; 
+        genelink.href = urlgene; genelink.innerHTML = urlgene;" target="_blank">
     <input id="parturl" type="hidden" value="https://conekt.legumeinfo.org/sequence/find_forLIS/">
-       &nbsp;&nbsp; geneID: <input type="text" id="geneid" defaultvalue="glyma.Wm82.gnm2.ann1.Glyma.15g026400" size="40"
-    >
-    <input type="submit" value="GO">
-    <br>
-    &nbsp;&nbsp; Examples (include prefix but omit splice variant): &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.15g026400 &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.12G040000
+    &nbsp;&nbsp; Prefixed gene ID: <input style="color:#235626;font-style:italic;font-size:0.9em" type="text" id="geneid" size="40">
+    <input type="submit" value="GO"><br>
+    &nbsp;&nbsp; Examples (include prefix; assembly 2): &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.15g026400 &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.12G040000
   </form>
-  <font style="color:gray">&nbsp;&nbsp; URL for the gene:</font> <a id="genelink"></a>
+  <font style="color:gray">&nbsp;&nbsp;&nbsp;&nbsp; URL for the gene:</font> <a id="genelink"></a>
 </p>
 
 
 <p>
   <b style="font-size:larger">Comparing Expression profiles of multiple genes</b><br>
-  From the <b><a target="_blank" href="https://conekt.legumeinfo.org/profile_comparison/">CoNekT Compare Profiles page</a></b>, you can compare the expression of up to 50 genes on the same graph in each experimental condition or tissue
-To use this tool: 
-
+  Compare the expression of up to 50 genes for each experimental condition or tissue at the <b><a target="_blank" href="https://conekt.legumeinfo.org/profile_comparison/">CoNekT Compare Profiles page</a></b>
 </p>
+
+
+<p>
+  <b style="font-size:larger">BAR eFP (electronic fluorescent pictograph) browser</b> for genes from the in the Williams 82 assemblies 1 and 2.</br>
+  
+  <script type="text/javascript">
+    function clearElement(e) {
+      var value = document.getElementById('quickSearchInput').value;
+    }
+  </script>
+  <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" style="display:inline;" target="_blank">
+    <input type="hidden" id="dataSource" name="dataSource" value="soybean_severin">
+    <input type="hidden" id="mode" name="mode" value="Absolute">
+    &nbsp;&nbsp; <input id="primaryGene" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      id="quickSearchInput" name="primaryGene" value="Glyma12g04390" onFocus="clearElement(this);" />
+    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
+  </form>
+  Whole-plant atlas; Severin et al. (2010)<br>
+  
+  <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" style="display:inline;" target="_blank">
+    <input type="hidden" id="dataSource" name="dataSource" value="soybean">
+    <input type="hidden" id="mode" name="mode" value="Absolute">
+    &nbsp;&nbsp; <input id="primaryGene" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      id="quickSearchInput" name="primaryGene" value="Glyma.12G040000" onFocus="clearElement(this);" />
+    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
+  </form>
+  Whole-plant and root expression data; Libault et al. (2010)<br>
+  
+  <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" style="display:inline;" target="_blank">
+    <input type="hidden" id="dataSource" name="dataSource" value="soybean_embryonic_development">
+    <input type="hidden" id="mode" name="mode" value="Absolute">
+    &nbsp;&nbsp; <input id="primaryGene" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      id="quickSearchInput" name="primaryGene" value="Glyma15g03040" onFocus="clearElement(this);" />
+    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
+  </form>
+  Godberg-Harada Soybean embryonic seed; Danzer et al. (2015)<br>
+  
+  <form action="https://bar.utoronto.ca/efpsoybean/cgi-bin/efpWeb.cgi" name="search" method="get" style="display:inline;" target="_blank">
+    <input type="hidden" id="dataSource" name="dataSource" value="soybean_heart_cotyledon_globular">
+    <input type="hidden" id="mode" name="mode" value="Absolute">
+    &nbsp;&nbsp; <input id="primaryGene" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      id="quickSearchInput" name="primaryGene" value="Glyma.15g026400" onFocus="clearElement(this);" />
+    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
+  </form>
+  Godberg-Harada Soybean heart / globular / cotyledon; Peltier et al. (2017)
+  <br>
+  
+  &nbsp;&nbsp; Examples (no prefix; assemby 1 or 2): 
+  &nbsp;&nbsp; Glyma12g04390 &nbsp;&nbsp; Glyma.12G040000 &nbsp;&nbsp; Glyma15g03040 &nbsp;&nbsp; Glyma.15g026400 
+  
+</p>
+
 
 <p>
   <b style="font-size:larger">Expression plot in GlycineMine</b> for genes from the in the Williams 82 assembly 2.<br>
@@ -43,30 +90,12 @@ To use this tool:
     }
   </script>
   <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
-    &nbsp;&nbsp; GeneID: <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
-    value="Glyma.15g026400" onFocus="clearElement(this);" />
+    &nbsp;&nbsp; <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" 
+      id="quickSearchInput" name="identifier" value="Glyma.15g026400" onFocus="clearElement(this);" />
     <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
   </form>
   <br>
-  &nbsp;&nbsp; Examples (prefix optional, but omit splice variant): &nbsp;&nbsp; Glyma.15g026400 &nbsp;&nbsp; Glyma.12G040000
-</p>
-
-
-<p>
-  <b style="font-size:larger">BAR eFP (electronic fluorescent pictograph) browser</b> for genes from the in the Williams 82 assembly 2.</br>
-  Enter a gene ID, click Search, select the glyma.Wm82.gnm2 gene model, then select the link to BAR eFP.
-  <script type="text/javascript">
-    function clearElement(e) {
-      var value = document.getElementById('quickSearchInput').value;
-    }
-  </script>
-  <form action="/tools/search/gene.html" name="search" method="get" style="display:inline;">
-    &nbsp;&nbsp; GeneID: <input id="identifier" style="width:180px;color:#235626;font-style:italic;font-size:0.9em" type="text" id="quickSearchInput" name="identifier"
-    value="Glyma.15g026400" onFocus="clearElement(this);" />
-    <input type="submit" id="quickSearchButton" name="searchSubmit" value="GO" />
-  </form>
-  <br>
-  &nbsp;&nbsp; Examples (prefix optional, but omit splice variant): &nbsp;&nbsp; Glyma.15g026400 &nbsp;&nbsp; Glyma.12G040000
+  &nbsp;&nbsp; Examples (prefix optional; assembly 2): &nbsp;&nbsp; Glyma.15g026400 &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.12G040000
 </p>
 
 
