fix URL contrast for 508 compliance

--- a/tools/expression/index.html
+++ b/tools/expression/index.html
@@ -23,7 +23,7 @@ tools_menu: true
       <br>
       &nbsp;&nbsp; Examples (include prefix; assembly 2): &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.15g026400 &nbsp;&nbsp; glyma.Wm82.gnm2.ann1.Glyma.12G040000
     </form>
-    <font style="color:gray">&nbsp;&nbsp;&nbsp;&nbsp; URL for the gene:</font> <a id="genelink" href="" target="_blank"></a>
+    <font style="color:#666">&nbsp;&nbsp;&nbsp;&nbsp; URL for the gene:</font> <a id="genelink" href="" target="_blank" style="word-wrap: break-word;"></a>
   </p>
 </div>
 
